# Rust-CLI

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: Todo  main.rs
src/games/: batonnets.rs  boite_maudite.rs  game421.rs  pendu.rs  rock_paper_scissors.rs  secret_number.rs  tic_tac_toe.rs
src/systems/: algoshort.rs  benchmark.rs  sysinfo.rs
src/tools/: encrypt.rs  pass_gen.rs  temperatureconverter.rs  timer.rs  todo.rs  todos.rs
