[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.0"
whoami = "1.5.0"
chrono = "0.4.35"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
console = "0.15.8"
rodio = "0.17.3"
sysinfo  = "0.30.7"
